--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>mcib3d</groupId>
     <artifactId>tapas-core</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.5</version>
     <build>
         <plugins>
             <plugin>
@@ -19,7 +19,6 @@
             </plugin>
         </plugins>
     </build>
-
     <dependencies>
     <dependency>
         <groupId>net.imagej</groupId>
