--- a/pom.xml
+++ b/pom.xml
@@ -34,18 +34,24 @@
         <dependency>
             <groupId>ome</groupId>
             <artifactId>bio-formats_plugins</artifactId>
-            <version>5.9.2</version>
+            <version>6.0.1</version>
         </dependency>
         <dependency>
-            <groupId>omero</groupId>
-            <artifactId>blitz</artifactId>
-            <version>5.4.3-ice36-b77</version>
+            <groupId>org.openmicroscopy</groupId>
+            <artifactId>omero-gateway</artifactId>
+            <version>5.5.3</version>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>1.8.0.10</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>omero</groupId>
+            <artifactId>model-psql</artifactId>
+            <version>5.5.0-m1-ice36-b102</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -73,13 +79,13 @@
             <url>https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases</url>
         </repository>
         <repository>
+            <id>ome.maven</id>
+            <url>http://artifacts.openmicroscopy.org/artifactory/maven/</url>
+        </repository>
+        <repository>
             <id>ome</id>
             <name>OME Artifactory</name>
             <url>https://artifacts.openmicroscopy.org/artifactory/ome.releases/</url>
-        </repository>
-        <repository>
-            <id>ome.maven</id>
-            <url>http://artifacts.openmicroscopy.org/artifactory/maven/</url>
         </repository>
         <repository>
             <id>unidata-releases</id>
