* ImageInfo changed getName by getImage * new macros extension for Omero

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -6,6 +6,7 @@ TAPAS,"TAPAS MENU",mcib3d.tapas.plugins.TAPAS_MENU
 TAPAS,"-"
 TAPAS,"OMERO Load",mcib3d.tapas.plugins.Omero_Read
 TAPAS,"OMERO Save",mcib3d.tapas.plugins.Omero_Save
+TAPAS,"OMERO Macro",mcib3d.tapas.plugins.OmeroMacro
 
 
 
