* new utilities + inputImage and outputImage * processing and processor are now abstract, default implementation is IJ with ImagePlus

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>mcib3d</groupId>
     <artifactId>tapas-core</artifactId>
+    <packaging>pom</packaging>
     <version>0.5</version>
     <build>
         <plugins>
