New documentation; new keyValues for LOCAL

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,6 +1,6 @@
 TAPAS,"TAPAS CONNECT",mcib3d.tapas.plugins.Omero_Password
 TAPAS,"TAPAS OMERO",mcib3d.tapas.plugins.TAPAS_OMERO
-TAPAS,"TAPAS FILES",mcib3d.tapas.plugins.TAPAS_FILES
+TAPAS,"TAPAS LOCAL",mcib3d.tapas.plugins.TAPAS_FILES
 TAPAS,"TAPAS BATCH",mcib3d.tapas.plugins.Tapas_Batch
 TAPAS,"TAPAS MENU",mcib3d.tapas.plugins.TAPAS_MENU
 TAPAS,"-"
